ST-7301 fix subtack collapse

--- a/src/components/TaskCard/TaskCard.scss
+++ b/src/components/TaskCard/TaskCard.scss
@@ -316,27 +316,36 @@ svg.red {
 .subTasksButton {
   cursor: pointer;
   position: relative;
-  font-size: $font-size-small;
+  font-size: 8px;
   background-color: $color-lightgray;
   padding: 0.05rem;
   white-space: nowrap;
   border: 1px solid darken($color-gray, 10%);
-  transition: $transition;
+  transition: transform 2s;
   margin-left: 0.5rem;
   border-top: 0;
   text-align: center;
+  line-height: 6px;
+}
+.subTasksButtonOpen {
+  svg {
+    transform: rotate(180deg);
+    transition: transform 0.3s;
+  }
+}
+.subTasksButtonClose {
+  svg {
+    transform: rotate(0deg);
+    transition: transform 0.3s;
+  }
 }
 .subTasksBlock {
   max-height: 0;
-  transition: max-height 0.15s ease-out;
+  transition: 0.2s;
   overflow: hidden;
 }
 .subTasksShow {
-  max-height: inherit;
-  transition: max-height 0.25s ease-in;
-}
-.subTasksHide {
-  height: 0;
+  max-height: 500px;
 }
 
 $borderOffset: -0.25rem;
